# WikiLinks

./: .gitignore  Optimizations.md  README.md  WikiLinkr.sln  parse2.py  parser5.py  parser5_2.py  parser6.py  parsr7.py  parsr8.py  parsr8_1.py  parsr9.py  retrieve.sh  segmentr1.py  segmentr2.py  segmentr3.py
WikiLinkr/: BFS.h  WikiLinkr.vcxproj  entry.h  main.cpp  path.h  table.h  table_test.cpp
bfs/: Cargo.toml
bfs/src/: lib.rs  main.rs
data/: simplewiki-20151020-pages-articles_out0
include/: json.h
links/: Cargo.toml  Rocket.toml
links/benches/: benches.rs  bfs_bench.rs
links/migrations/20170304053309_cache/: down.sql  up.sql
links/src/: article.rs  lib.rs  main.rs  web.rs
links/src/cache/: cache_elem.rs  long_cache.rs  mod.rs  models.rs  new_cache.rs  stack_cache.rs
links/src/hash_links/: mod.rs
links/src/link_data/: mod.rs
links/src/link_data/pagerank/: mod.rs
links/src/link_db/: mod.rs
links/src/link_db/parse/: mod.rs  regexes.rs
links/src/link_db/parse/database/: helpers.rs  mod.rs
links/src/link_state/: bfs.rs  entry.rs  hash_links.rs  link_data.rs  link_table.rs  mod.rs  path.rs
links/src/link_state/bfs/: bloom.rs  ihm.rs  mod.rs  path.rs
links/src/link_state/hash_links/: bfs.rs  mod.rs
links/src/link_state/link_db/: mod.rs
links/src/link_state/link_db/parse/: mod.rs  regexes.rs
links/src/link_state/link_db/parse/database/: helpers.rs  mod.rs
links/src/link_state/proc_data/: longest_path.rs  mod.rs  pagerank.rs
links/src/link_state/rank_data/: mod.rs  pagerank.rs
links/src/parse/: main.rs
links/src/parse/database/: mod.rs
links/src/rank_data/: mod.rs
links/src/rank_data/pagerank/: mod.rs
links/templates/: bfs.html.tera
misc_data/: simplewiki-20151020-pages-articles_out0
old/: segmentr3.py
pagerank/: Cargo.toml
pagerank/src/: lib.rs  main.rs
parse/: Cargo.toml
parse/src/: database.rs  lib.rs  main.rs  regexes.rs
parse/src/database/: helpers.rs  mod.rs
sample/: Cargo.toml
sample/src/: main.rs
site/: Cargo.toml
site/migrations/20170112014728_wikilinks_cache/: down.sql  up.sql
site/src/: database.rs  helpers.rs  lib.rs
site/src/database/: mod.rs  models.rs
site/templates/: bfs.html.tera
src/: BFS.h  a.out  entry.h  main.cpp  parser8_2.py  table.h
src/misc/: WikiLinkr.vcxproj  _table_h_atomic_bomb  a.out  main.cpp  main2.cpp  many.out  mem_leaks1  (+10 more)
web/: abs_path.h  cache.cpp  cache.h  main.cpp  queue.h
wikidata/: Cargo.toml
(+14 files in other folders)
