[package]
name = "links"
version = "0.1.0"
authors = ["owen <owen@oms.sh>"]

[dependencies]
fnv = "1.0.5"
clap = "2.20.5"
regex = "0.1.80"

slog = "1.5.2"
slog-term = "1.5.0"

serde = "1"
serde_json = "1"
serde_derive = "1"

fst = "0.3"
rand = "0.4"
csv = "1.0.0-beta.5"

lazy_static = "1.0"


[features]
simple = []

