[package]
name = "parse"
version = "0.1.0"
authors = ["Owen Stenson <stensonowen@gmail.com>"]
description = "Extract important information from Wikimedia SQL dumps for static lookup tables"

[dependencies]
phf = "0.7.20"
phf_codegen = "0.7.20"
regex = "0.1.80"
nom = "2.0.1"
slog = "1.4.0"
slog-term = "1.3.4"

