[package]
name = "site"
version = "0.1.0"
authors = ["owen <stensonowen@gmail.com>"]

[dependencies]
phf = "0.7.20"
wikidata = { path = "../wikidata" }
bfs = { path = "../bfs" }

rocket = "0.1.4"
rocket_codegen = "0.1.4"

serde = "0.8"
serde_derive = "0.8"

diesel = "0.9.0"

[dependencies.rocket_contrib]
version = "0.1.4"
default-features = false
features = ["tera_templates", "json"]
