[package]
name = "site"
version = "0.1.0"
authors = ["owen <stensonowen@gmail.com>"]


[dependencies]

phf = "0.7.20"
wikidata = { path = "../wikidata" }
bfs = { path = "../bfs" }

rocket = "0.1.4"
rocket_codegen = "0.1.4"
r2d2 = "0.7.1"
r2d2-diesel = "0.9.0"
lazy_static = "0.2.2"

serde = "0.8"
serde_derive = "0.8"

dotenv = "0.8.0"
chrono = "0.2.25"
diesel = { version = "0.9.0", features = ["chrono"] }
diesel_codegen = { version = "0.9.0", features = ["postgres"] }

[dependencies.rocket_contrib]
version = "0.1.4"
default-features = false
features = ["tera_templates", "json"]

